# dispatch-r

./: .gitignore  Cargo.toml  README.md
src-backend/: Cargo.toml  tauri.conf.json
src-backend/src/: main.rs
src-frontend/: Cargo.toml
src-frontend/src/: main.rs
