[package]
name = "dispatch-r-backend"
version = "0.0.1"
edition = "2021"
authors = ["Jay Stevens <dispatch-r@jaystevens.me>"]
description = "Dispatch-R is an easy-to-use model railroad automation software, written in Rust. This is the backend, which communicates with the frontend."
repository = "https://github.com/Jay2645/dispatch-r"
readme = "../README.md"
license = "GPL-3.0-or-later"
categories = ["science::robotics", "games"]
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
tauri-plugin-localhost = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
